--- a/Day-4/style.css
+++ b/Day-4/style.css
@@ -16,6 +16,7 @@
     --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-green-500: oklch(72.3% 0.219 149.579);
+    --color-cyan-300: oklch(86.5% 0.127 207.078);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-pink-500: oklch(65.6% 0.241 354.308);
@@ -23,7 +24,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-sm: 24rem;
-    --container-xl: 36rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -36,6 +36,7 @@
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --animate-spin: spin 1s linear infinite;
     --animate-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
     --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
@@ -233,8 +234,8 @@
   }
   .container {
     width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
+    @media (width >= 440px) {
+      max-width: 440px;
     }
     @media (width >= 48rem) {
       max-width: 48rem;
@@ -279,8 +280,17 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
+  }
+  .mr-2 {
+    margin-right: calc(var(--spacing) * 2);
+  }
+  .mr-6 {
+    margin-right: calc(var(--spacing) * 6);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -288,11 +298,17 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .ml-4 {
+    margin-left: calc(var(--spacing) * 4);
+  }
   .flex {
     display: flex;
   }
   .grid {
     display: grid;
+  }
+  .hidden {
+    display: none;
   }
   .table {
     display: table;
@@ -316,6 +332,9 @@
   .size-full {
     width: 100%;
     height: 100%;
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
@@ -341,9 +360,6 @@
   .w-full {
     width: 100%;
   }
-  .w-xl {
-    width: var(--container-xl);
-  }
   .max-w-sm {
     max-width: var(--container-sm);
   }
@@ -368,72 +384,11 @@
   .border-collapse {
     border-collapse: collapse;
   }
-  .origin-bottom {
-    transform-origin: bottom;
-  }
   .origin-right {
     transform-origin: right;
   }
-  .scale-50 {
-    --tw-scale-x: 50%;
-    --tw-scale-y: 50%;
-    --tw-scale-z: 50%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-96 {
-    --tw-scale-x: 96%;
-    --tw-scale-y: 96%;
-    --tw-scale-z: 96%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-125 {
-    --tw-scale-x: 125%;
-    --tw-scale-y: 125%;
-    --tw-scale-z: 125%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-175 {
-    --tw-scale-x: 175%;
-    --tw-scale-y: 175%;
-    --tw-scale-z: 175%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-x-5 {
-    --tw-scale-x: 5%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-x-50 {
-    --tw-scale-x: 50%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-x-125 {
-    --tw-scale-x: 125%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-x-175 {
-    --tw-scale-x: 175%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .rotate-45 {
-    rotate: 45deg;
-  }
-  .rotate-x-180 {
-    --tw-rotate-x: rotateX(180deg);
-    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .rotate-y-180 {
-    --tw-rotate-y: rotateY(180deg);
-    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .rotate-z-180 {
-    --tw-rotate-z: rotateZ(180deg);
-    transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .transform-\[matrix\(1\,2\,3\,4\,5\,6\)\] {
-    transform: matrix(1,2,3,4,5,6);
   }
   .animate-bounce {
     animation: var(--animate-bounce);
@@ -476,6 +431,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-evenly {
+    justify-content: space-evenly;
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -531,6 +489,9 @@
   .bg-\[\#1F1F1F\] {
     background-color: #1F1F1F;
   }
+  .bg-\[\#9d9d9d\] {
+    background-color: #9d9d9d;
+  }
   .bg-\[\#141414\] {
     background-color: #141414;
   }
@@ -539,6 +500,9 @@
   }
   .bg-\[\#333333\] {
     background-color: #333333;
+  }
+  .bg-\[\#e8e4e4\] {
+    background-color: #e8e4e4;
   }
   .bg-amber-300 {
     background-color: var(--color-amber-300);
@@ -569,6 +533,15 @@
   }
   .bg-yellow-500 {
     background-color: var(--color-yellow-500);
+  }
+  .object-contain {
+    object-fit: contain;
+  }
+  .object-cover {
+    object-fit: cover;
+  }
+  .object-fill {
+    object-fit: fill;
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
@@ -632,22 +605,6 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-\[height\] {
-    transition-property: height;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-colors {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .delay-300 {
-    transition-delay: 300ms;
-  }
-  .delay-1000 {
-    transition-delay: 1000ms;
-  }
   .duration-75 {
     --tw-duration: 75ms;
     transition-duration: 75ms;
@@ -659,6 +616,10 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
   }
   .duration-500 {
     --tw-duration: 500ms;
@@ -672,21 +633,9 @@
     --tw-duration: 2000ms;
     transition-duration: 2000ms;
   }
-  .duration-3200 {
-    --tw-duration: 3200ms;
-    transition-duration: 3200ms;
-  }
-  .duration-21000 {
-    --tw-duration: 21000ms;
-    transition-duration: 21000ms;
-  }
-  .hover\:translate-y-2 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-translate-y: calc(var(--spacing) * 2);
-        translate: var(--tw-translate-x) var(--tw-translate-y);
-      }
-    }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
   }
   .hover\:scale-1 {
     &:hover {
@@ -708,22 +657,12 @@
       }
     }
   }
-  .hover\:scale-50 {
+  .hover\:scale-100 {
     &:hover {
       @media (hover: hover) {
-        --tw-scale-x: 50%;
-        --tw-scale-y: 50%;
-        --tw-scale-z: 50%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-96 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 96%;
-        --tw-scale-y: 96%;
-        --tw-scale-z: 96%;
+        --tw-scale-x: 100%;
+        --tw-scale-y: 100%;
+        --tw-scale-z: 100%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
       }
     }
@@ -758,11 +697,10 @@
       }
     }
   }
-  .hover\:scale-x-200 {
+  .hover\:scale-3d {
     &:hover {
       @media (hover: hover) {
-        --tw-scale-x: 200%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
+        scale: var(--tw-scale-x) var(--tw-scale-y) var(--tw-scale-z);
       }
     }
   }
@@ -773,73 +711,10 @@
       }
     }
   }
-  .hover\:rotate-90 {
-    &:hover {
-      @media (hover: hover) {
-        rotate: 90deg;
-      }
-    }
-  }
-  .hover\:rotate-x-1 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-x: rotateX(1deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-x-45 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-x: rotateX(45deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-x-90 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-x: rotateX(90deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-x-180 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-x: rotateX(180deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
   .hover\:rotate-x-360 {
     &:hover {
       @media (hover: hover) {
         --tw-rotate-x: rotateX(360deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-y-45 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-y: rotateY(45deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-y-90 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-y: rotateY(90deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-y-180 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-y: rotateY(180deg);
         transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
       }
     }
@@ -852,30 +727,6 @@
       }
     }
   }
-  .hover\:rotate-z-45 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-z: rotateZ(45deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-z-90 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-z: rotateZ(90deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:rotate-z-180 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-rotate-z: rotateZ(180deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
   .hover\:rotate-z-360 {
     &:hover {
       @media (hover: hover) {
@@ -884,61 +735,10 @@
       }
     }
   }
-  .hover\:skew-2 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-x: skewX(2deg);
-        --tw-skew-y: skewY(2deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:skew-6 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-x: skewX(6deg);
-        --tw-skew-y: skewY(6deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:skew-12 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-x: skewX(12deg);
-        --tw-skew-y: skewY(12deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:-skew-x-12 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-x: skewX(calc(12deg * -1));
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
   .hover\:skew-x-12 {
     &:hover {
       @media (hover: hover) {
         --tw-skew-x: skewX(12deg);
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:-skew-y-12 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-y: skewY(calc(12deg * -1));
-        transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-      }
-    }
-  }
-  .hover\:skew-y-12 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-skew-y: skewY(12deg);
         transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
       }
     }
@@ -957,6 +757,13 @@
       }
     }
   }
+  .hover\:text-cyan-300 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-cyan-300);
+      }
+    }
+  }
   .hover\:opacity-15 {
     &:hover {
       @media (hover: hover) {
@@ -965,56 +772,71 @@
     }
   }
   .sm\:mx-1\.5 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       margin-inline: calc(var(--spacing) * 1.5);
     }
   }
+  .sm\:block {
+    @media (width >= 440px) {
+      display: block;
+    }
+  }
   .sm\:size-12 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       width: calc(var(--spacing) * 12);
       height: calc(var(--spacing) * 12);
     }
   }
   .sm\:size-14 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       width: calc(var(--spacing) * 14);
       height: calc(var(--spacing) * 14);
     }
   }
   .sm\:h-48 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       height: calc(var(--spacing) * 48);
     }
   }
   .sm\:w-6 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       width: calc(var(--spacing) * 6);
     }
   }
   .sm\:w-\[95\%\] {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       width: 95%;
     }
   }
+  .sm\:w-full {
+    @media (width >= 440px) {
+      width: 100%;
+    }
+  }
   .sm\:gap-2 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       gap: calc(var(--spacing) * 2);
     }
   }
   .sm\:gap-3 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       gap: calc(var(--spacing) * 3);
     }
   }
   .sm\:border-\[2px\] {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       border-style: var(--tw-border-style);
       border-width: 2px;
     }
   }
   .sm\:p-3 {
-    @media (width >= 40rem) {
+    @media (width >= 440px) {
       padding: calc(var(--spacing) * 3);
+    }
+  }
+  .sm\:px-4 {
+    @media (width >= 440px) {
+      padding-inline: calc(var(--spacing) * 4);
     }
   }
   .md\:size-16 {
@@ -1048,21 +870,16 @@
       padding: calc(var(--spacing) * 4);
     }
   }
-}
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
+  .dark\:bg-\[\#242424\] {
+    @media (prefers-color-scheme: dark) {
+      background-color: #242424;
+    }
+  }
+  .dark\:text-white {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-white);
+    }
+  }
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -1102,20 +919,24 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-translate-x {
+@property --tw-ease {
   syntax: "*";
   inherits: false;
-  initial-value: 0;
 }
-@property --tw-translate-y {
+@property --tw-scale-x {
   syntax: "*";
   inherits: false;
-  initial-value: 0;
+  initial-value: 1;
 }
-@property --tw-translate-z {
+@property --tw-scale-y {
   syntax: "*";
   inherits: false;
-  initial-value: 0;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
 @keyframes spin {
   to {
@@ -1146,9 +967,6 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-scale-x: 1;
-      --tw-scale-y: 1;
-      --tw-scale-z: 1;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
@@ -1158,9 +976,10 @@
       --tw-font-weight: initial;
       --tw-outline-style: solid;
       --tw-duration: initial;
-      --tw-translate-x: 0;
-      --tw-translate-y: 0;
-      --tw-translate-z: 0;
+      --tw-ease: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
